--- a/.env
+++ b/.env
@@ -1,4 +1,8 @@
-# .env (Recommended Change)
+# .env 
+
+# Set isLimitingRepos=True to stop processing repos after certain number of repos (LimitNumberOfRepos).
+isLimitingRepos=False
+LimitNumberOfRepos=10
 
 # Output Files 
 catalogJsonFile=code.json
@@ -33,9 +37,4 @@ AZURE_DEVOPS_PROJECT=YourAzureDevOpsProjectName
 
 # The link to the instructions PDF (no quotes) which will replace the repositorURL value for ALL private repos
 INSTRUCTIONS_PDF_URL=https://github.com/your-org/your-public-repo/blob/main/instructions.pdf 
-
-# Optional: Base URLs if using self-hosted instances
-# GITHUB_API_URL=https://api.github.com
-# GITLAB_API_URL=https://gitlab.com/api/v4
-# AZURE_DEVOPS_API_URL=https://dev.azure.com
 
