--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-# .env 
+# .env (Recommended Change)
 
-# Set isLimitingRepos=True to stop processing repos after certain number of repos (LimitNumberOfRepos).
+# Set to True to limit the run to certain number of repositories to process. Testing & debugging only.
 isLimitingRepos=False
 LimitNumberOfRepos=10
 
@@ -11,20 +11,24 @@ PrivateIDCSVFile=privateid_mapping.csv
 OutputDir=output
 
 # Default Contact Email
+# Default "Contact" field when a public repo contains no contact email.
 DEFAULT_CONTACT_EMAIL=shareit@cdc.gov
+# Default email address for all private repos. This will protect them from email spans. 
+# The true actual email contacts for private repos are stored in the privateIDCSVFile
 PRIVATE_REPO_CONTACT_EMAIL=shareit@cdc.gov
+# The link to a "instructions.PDF" (no quotes) will be placed in the repositorURL metadata fields for ALL private repos.
+INSTRUCTIONS_PDF_URL=https://github.com/your-org/your-public-repo/blob/main/instructions.pdf 
 
-# Keep quotes if the key itself needs them
+# AI API Keys
 GEMINI_API_KEY=YOUR_GEMINI_API_KEY
-GOOGLE_API_KEY=YOUR_GOOGLE_API_KEY
+GOOGLE_API_KEY=YOUR_GOOLE_API_KEY
 MAX_TOKENS=15000
 
 # Next is the delay in seconds between each AI request to avoid hitting the rate limit error.
-# If you are using a free-tier API token, set this to 4.5 to avoid rate limiting. Otherwise, you can set it to 0.0 for faster processing.
-#AI_DELAY_ENABLED=4.5
+# If you are using a free-tier API token, set this to 4.5 to avoid rate limiting. Otherwise,set it to 0.0 for faster processing.
 AI_DELAY_ENABLED=0.0
 
-# Platform API Tokens and Org/Group Names  NOTE: no quotes needed
+# Repository Platform API Tokens and Org/Group Names  NOTE: no quotes needed
 GITHUB_TOKEN=YOUR_GITHUB_PAT
 GITHUB_ORG=cYourGitHubGroupNameOrIDt
 
@@ -34,7 +38,3 @@ GITLAB_GROUP=YourGitLabGroupNameOrID
 AZURE_DEVOPS_TOKEN=YOUR_AZURE_DEVOPS_PAT
 AZURE_DEVOPS_ORG=YourAzureDevOpsOrgName
 AZURE_DEVOPS_PROJECT=YourAzureDevOpsProjectName
-
-# The link to the instructions PDF (no quotes) which will replace the repositorURL value for ALL private repos
-INSTRUCTIONS_PDF_URL=https://github.com/your-org/your-public-repo/blob/main/instructions.pdf 
-
