--- a/.env
+++ b/.env
@@ -1,14 +1,14 @@
 # .env (Recommended Change)
 
-# Set to True to limit the run to certain number of repositories to process. Testing & debugging only.
-isLimitingRepos=False
-LimitNumberOfRepos=10
+# Set to None or 0 (zero) or enter the number of repositories to process. Testing & debugging only.
+LimitNumberOfRepos=5
 
 # Output Files 
+OutputDir=output
 catalogJsonFile=code.json
 ExemptedCSVFile=exempted_log.csv
 PrivateIDCSVFile=privateid_mapping.csv
-OutputDir=output
+AGENCY_NAME="Centers for Disease Control and Prevention"
 
 # Default Contact Email
 # Default "Contact" field when a public repo contains no contact email.
@@ -17,24 +17,25 @@ DEFAULT_CONTACT_EMAIL=cdcinfo@cdc.gov
 # The true actual email contacts for private repos are stored in the privateIDCSVFile
 PRIVATE_REPO_CONTACT_EMAIL=shareit@cdc.gov
 # The link to a "instructions.PDF" (no quotes) will be placed in the repositorURL metadata fields for ALL private repos.
-INSTRUCTIONS_PDF_URL=https://github.com/your-org/your-public-repo/blob/main/instructions.pdf 
+INSTRUCTIONS_PDF_URL=https://github.com/CDCGov/ShareIT-Act/instructions.pd 
+EXEMPTED_NOTICE_PDF_URL=https://github.com/CDCGov/ShareIT-Act/exempted_notice.pdf 
 
 # AI API Keys
-GEMINI_API_KEY=YOUR_GEMINI_API_KEY
 GOOGLE_API_KEY=YOUR_GOOLE_API_KEY
 MAX_TOKENS=15000
-
 # Next is the delay in seconds between each AI request to avoid hitting the rate limit error.
 # If you are using a free-tier API token, set this to 4.5 to avoid rate limiting. Otherwise,set it to 0.0 for faster processing.
 AI_DELAY_ENABLED=0.0
+AI_ORGANIZATION_ENABLED=True
 
-# Repository Platform API Tokens and Org/Group Names  NOTE: no quotes needed
-GITHUB_TOKEN=YOUR_GITHUB_PAT
-GITHUB_ORG=cYourGitHubGroupNameOrIDt
+# Repository Platform Target Configurations NOTE: no quotes needed
+# Tokens/Auth details are now passed via CLI arguments.
+GITHUB_ORGS=CDCent,CDCgov,informaticslab,cdcai,epi-info,niosh-mining
 
-GITLAB_TOKEN=YOUR_GITLAB_PAT   
-GITLAB_GROUP=YourGitLabGroupNameOrID
+GITLAB_URL=https://gitlab.com # Or your specific GitLab instance URL
+GITLAB_GROUPS=my-biotech-group,philab-group/subgroup
 
-AZURE_DEVOPS_TOKEN=YOUR_AZURE_DEVOPS_PAT
-AZURE_DEVOPS_ORG=YourAzureDevOpsOrgName
-AZURE_DEVOPS_PROJECT=YourAzureDevOpsProjectName
+AZURE_DEVOPS_API_URL=https://dev.azure.com
+AZURE_DEVOPS_ORG=MyAzureOrg # Your default Azure DevOps organization name
+# Comma-separated list of Azure DevOps OrgName/ProjectName pairs.
+AZURE_DEVOPS_TARGETS=MyAzureOrg/ProjectA,MyAzureOrg/ProjectB,AnotherOrg/ProjectC
