--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # .env (Recommended Change)
 
 # Set to None or 0 (zero) or enter the number of repositories to process. Testing & debugging only.
-LimitNumberOfRepos=5
+LimitNumberOfRepos=0
 
 # Output Files 
 OutputDir=output
@@ -17,8 +17,13 @@ DEFAULT_CONTACT_EMAIL=cdcinfo@cdc.gov
 # The true actual email contacts for private repos are stored in the privateIDCSVFile
 PRIVATE_REPO_CONTACT_EMAIL=shareit@cdc.gov
 # The link to a "instructions.PDF" (no quotes) will be placed in the repositorURL metadata fields for ALL private repos.
-INSTRUCTIONS_PDF_URL=https://github.com/CDCGov/ShareIT-Act/instructions.pd 
+INSTRUCTIONS_PDF_URL=https://github.com/CDCGov/ShareIT-Act/instructions.pdf 
 EXEMPTED_NOTICE_PDF_URL=https://github.com/CDCGov/ShareIT-Act/exempted_notice.pdf 
+
+# Use as a factor to estimate of the number of hours (laborHours). 
+# Assume that each commit represents half an hour of labor when you are estimating the laborHours.
+# This provides a simple, albeit very rough, way to quantify development activity based on commit frequency.
+HOURS_PER_COMMIT=0.5 
 
 # AI API Keys
 GOOGLE_API_KEY=YOUR_GOOLE_API_KEY
