--- a/.env
+++ b/.env
@@ -20,8 +20,8 @@ PRIVATE_REPO_CONTACT_EMAIL=shareit@cdc.gov
 INSTRUCTIONS_PDF_URL=https://github.com/CDCGov/ShareIT-Act/instructions.pdf 
 EXEMPTED_NOTICE_PDF_URL=https://github.com/CDCGov/ShareIT-Act/exempted_notice.pdf 
 
-# Use as a factor to estimate of the number of hours (laborHours). 
-# Assume that each commit represents half an hour of labor when you are estimating the laborHours.
+# Use as a factor to estimate number of labor hours (laborHours). 
+# Assumes that each commit represents half an hour of labor when estimating the laborHours.
 # This provides a simple, albeit very rough, way to quantify development activity based on commit frequency.
 HOURS_PER_COMMIT=0.5 
 
