--- a/.env
+++ b/.env
@@ -31,14 +31,16 @@ MAX_TOKENS=15000
 # Next is the delay in seconds between each AI request to avoid hitting the rate limit error.
 # If you are using a free-tier API token, set this to 4.5 to avoid rate limiting. Otherwise,set it to 0.0 for faster processing.
 AI_DELAY_ENABLED=0.0
+# Set to True to enable Organization's name inference.  Basically, it can discern the organization's name 
+#from the readme.md, or repo URL, or other files.
 AI_ORGANIZATION_ENABLED=True
 
 # Repository Platform Target Configurations NOTE: no quotes needed
 # Tokens/Auth details are now passed via CLI arguments.
-GITHUB_ORGS=CDCent,CDCgov,informaticslab,cdcai,epi-info,niosh-mining
+GITHUB_ORGS=CDCent,CDCgov,informaticslab,cdcai,epi-info,niosh-mining  # if not passsed via command line, it defaults to these specific GitHub org(s)
 
-GITLAB_URL=https://gitlab.com # Or your specific GitLab instance URL
-GITLAB_GROUPS=my-biotech-group,philab-group/subgroup
+GITLAB_URL=https://gitlab.com # If no url is passed via command line, it defaults to this specific GitLab instance URL
+GITLAB_GROUPS=my-biotech-group,philab-group/subgroup # same as above, if not passsed via command line, it defaults to this specific GitLab group(s)
 
 AZURE_DEVOPS_API_URL=https://dev.azure.com
 AZURE_DEVOPS_ORG=MyAzureOrg # Your default Azure DevOps organization name
