--- a/.env
+++ b/.env
@@ -1,48 +1,74 @@
 # .env (Recommended Change)
 
-# Set to None or 0 (zero) or enter the number of repositories to process. Testing & debugging only.
-LimitNumberOfRepos=0
+# --- General Application Settings ---
+AGENCY_NAME="CDC"
+OutputDir="output"
+catalogJsonFile="code.json"
+ExemptedCSVFile="exempted_log.csv"
+PrivateIDCSVFile="privateid_mapping.csv"
+LimitNumberOfRepos="0" # Set to 0 or remove for no limit, or a positive integer to limit
+SCANNER_MAX_WORKERS="4" # Number of concurrent workers for repository processing
+HOURS_PER_COMMIT="0.5" # Default hours to estimate per commit, if enabled
 
-# Output Files 
-OutputDir=output
-catalogJsonFile=code.json
-ExemptedCSVFile=exempted_log.csv
-PrivateIDCSVFile=privateid_mapping.csv
-AGENCY_NAME="Centers for Disease Control and Prevention"
+# --- Default Contact Emails ---
+DEFAULT_CONTACT_EMAIL="cdcinfo@cdc.gov"
+PRIVATE_REPO_CONTACT_EMAIL="shareit@cdc.gov"
 
-# Default Contact Email
-# Default "Contact" field when a public repo contains no contact email.
-DEFAULT_CONTACT_EMAIL=cdcinfo@cdc.gov
-# Default email address for all private repos. This will protect them from email spans. 
-# The true actual email contacts for private repos are stored in the privateIDCSVFile
-PRIVATE_REPO_CONTACT_EMAIL=shareit@cdc.gov
-# The link to a "instructions.PDF" (no quotes) will be placed in the repositorURL metadata fields for ALL private repos.
+# --- URLs for Private/Exempt Repositories ---
 INSTRUCTIONS_PDF_URL=https://github.com/CDCGov/ShareIT-Act/instructions.pdf 
 EXEMPTED_NOTICE_PDF_URL=https://github.com/CDCGov/ShareIT-Act/exempted_notice.pdf 
 
-# Use as a factor to estimate number of labor hours (laborHours). 
-# Assumes that each commit represents half an hour of labor when estimating the laborHours.
-# This provides a simple, albeit very rough, way to quantify development activity based on commit frequency.
-HOURS_PER_COMMIT=0.5 
+# --- AI (Google Gemini) Configuration ---
+# To enable AI features, set AI_ENABLED to "true" and provide a GOOGLE_API_KEY
+AI_ENABLED="true"
+GOOGLE_API_KEY=AIzaSyDgVsCDNNS1uqv5D1HrbztF0Izsr2jXmpM
+#GOOGLE_API_KEY=YOUR_GOOGLE_API_KEY
+AI_MODEL_NAME="gemini-1.5-flash-latest" # Or gemini-1.5-flash-latest, etc.
+AI_TEMPERATURE="0.4"
+MAX_TOKENS="15000" # Max tokens for AI *input* truncation (used by exemption_processor)
+AI_MAX_OUTPUT_TOKENS="2048" # Max tokens for AI *output* generation
+AI_DELAY_ENABLED="0.0" # Delay in seconds between AI calls (e.g., 1.0 for 1 second)
+AI_ORGANIZATION_ENABLED="false" # Whether to use AI to infer organization
 
-# AI API Keys
-GOOGLE_API_KEY=YOUR_GOOGLE_API_KEY
-MAX_TOKENS=15000
-# Next is the delay in seconds between each AI request to avoid hitting the rate limit error.
-# If you are using a free-tier API token, set this to 4.5 to avoid rate limiting. Otherwise,set it to 0.0 for faster processing.
-AI_DELAY_ENABLED=0.0
-# Set to True to enable Organization's name inference.  Basically, it can discern the organization's name 
-#from the readme.md, or repo URL, or other files.
-AI_ORGANIZATION_ENABLED=True
+# --- Per-API Call Throttling (Base Delays) ---
+# Base delay in seconds to apply *after* each individual API call for the respective platform.
+# This is used by the dynamic delay calculator as its starting point. Set to 0.0 to disable.
+GITHUB_POST_API_CALL_DELAY_SECONDS="0.2"
+GITLAB_POST_API_CALL_DELAY_SECONDS="0.2" # Add for GitLab
+AZURE_DEVOPS_POST_API_CALL_DELAY_SECONDS="0.2" # Add for Azure DevOps
+
+# --- Dynamic Scaling Parameters for Post-API Call Delays ---
+# These parameters control how the base post-API call delay scales up when processing large targets.
+# Threshold: Number of repos in a target before dynamic scaling of post-API call delay kicks in.
+DYNAMIC_DELAY_THRESHOLD_REPOS="50"
+# Scale Factor: How much the base delay is multiplied by if the number of repos is, e.g., double the threshold.
+DYNAMIC_DELAY_SCALE_FACTOR="1.5"
+# Max Seconds: An upper cap for the dynamically calculated post-API call delay.
+DYNAMIC_DELAY_MAX_SECONDS="1.0"
 
 # Repository Platform Target Configurations NOTE: no quotes needed
 # Tokens/Auth details are now passed via CLI arguments.
+GITHUB_TOKEN="YOUR_GITHUB_PAT" # Personal Access Token for GitHub
 GITHUB_ORGS=CDCent,CDCgov,informaticslab,cdcai,epi-info,niosh-mining  # if not passsed via command line, it defaults to these specific GitHub org(s)
+# GITHUB_ENTERPRISE_URL="https://github.yourcompany.com" # Optional: URL for GitHub Enterprise Server
 
 GITLAB_URL=https://gitlab.com # If no url is passed via command line, it defaults to this specific GitLab instance URL
 GITLAB_GROUPS=my-biotech-group,philab-group/subgroup # same as above, if not passsed via command line, it defaults to this specific GitLab group(s)
+GITLAB_TOKEN="YOUR_GITLAB_PAT" # Personal Access Token for GitLab
+
 
 AZURE_DEVOPS_API_URL=https://dev.azure.com
 AZURE_DEVOPS_ORG=MyAzureOrg # Your default Azure DevOps organization name
 # Comma-separated list of Azure DevOps OrgName/ProjectName pairs.
 AZURE_DEVOPS_TARGETS=MyAzureOrg/ProjectA,MyAzureOrg/ProjectB,AnotherOrg/ProjectC
+AZURE_DEVOPS_TOKEN="YOUR_AZURE_DEVOPS_PAT" # Personal Access Token for Azure DevOps
+
+# --- Adaptive Delay for API Rate Limiting ---
+# Enable or disable the adaptive delay mechanism. Set to "true" or "false".
+ADAPTIVE_DELAY_ENABLED="true"
+# Base delay in seconds to apply after processing a repo if the threshold is met.
+ADAPTIVE_DELAY_BASE_SECONDS="0.1" # e.g., 100 milliseconds
+# Number of repositories in the current target (org/group/project) before adaptive delay kicks in.
+ADAPTIVE_DELAY_THRESHOLD_REPOS="50"
+# Maximum delay in seconds to apply after processing a repo, regardless of scaling.
+ADAPTIVE_DELAY_MAX_SECONDS="2.0" # e.g., 2 seconds
