--- a/.env
+++ b/.env
@@ -11,17 +11,44 @@ SCANNER_MAX_WORKERS="4" # Number of concurrent workers for repository processing
 HOURS_PER_COMMIT="0.5" # Default hours to estimate per commit, if enabled
 
 # --- Default Contact Emails ---
-DEFAULT_CONTACT_EMAIL="cdcinfo@cdc.gov"
-PRIVATE_REPO_CONTACT_EMAIL="shareit@cdc.gov"
+DEFAULT_CONTACT_EMAIL="cdcinfo@cdc.gov" # Default contact for public/open repos
+PRIVATE_REPO_CONTACT_EMAIL="shareit@cdc.gov" # Default contact for private/internal repos
 
 # --- URLs for Private/Exempt Repositories ---
 INSTRUCTIONS_PDF_URL=https://github.com/CDCGov/ShareIT-Act/instructions.pdf 
-EXEMPTED_NOTICE_PDF_URL=https://github.com/CDCGov/ShareIT-Act/exempted_notice.pdf 
+EXEMPTED_NOTICE_PDF_URL=https://github.com/CDCGov/ShareIT-Act/exempted_notice.pdf
 
+# -------------------------------
+#  AUTHENTICATION TOKENS
+# -------------------------------
+# --- Authentication Tokens & API Keys (IMPORTANT: Keep these secure!) ---
+GITHUB_TOKEN="YOUR_GITHUB_PAT" # Personal Access Token for GitHub
+GITLAB_TOKEN="YOUR_GITLAB_PAT" # Personal Access Token for GitLab
+AZURE_DEVOPS_TOKEN="YOUR_AZURE_DEVOPS_PAT" # Personal Access Token for Azure DevOps
+GOOGLE_API_KEY=YOUR_GOOGLE_API_KEY # For AI features (Gemini)
+
+# ------------------------------------------------------------------------------------
+#  REPOSITORY PLATFORM TARGETS (Organizations, Groups, Projects)
+# ------------------------------------------------------------------------------------
+# Configure the specific organizations, groups, or projects to scan on each platform.
+# These values are used as defaults if not overridden by command-line arguments.
+# Tokens/Auth details are primarily passed via CLI or found in the 'Authentication Tokens' section above.
+
+GITHUB_ORGS=CDCent,CDCgov,informaticslab,cdcai,epi-info,niosh-mining
+# GITHUB_ENTERPRISE_URL="https://github.yourcompany.com" # Optional: URL for GitHub Enterprise Server if used
+
+GITLAB_URL=https://gitlab.com
+GITLAB_GROUPS=my-biotech-group,philab-group/subgroup
+
+AZURE_DEVOPS_API_URL=https://dev.azure.com
+AZURE_DEVOPS_ORG=MyAzureOrg # Default Azure DevOps organization name
+AZURE_DEVOPS_TARGETS=MyAzureOrg/ProjectA,MyAzureOrg/ProjectB,AnotherOrg/ProjectC # OrgName/ProjectName pairs
+
+
+# ------------------------------------------------------------------------------------
 # --- AI (Google Gemini) Configuration ---
 # To enable AI features, set AI_ENABLED to "true" and provide a GOOGLE_API_KEY
 AI_ENABLED="true"
-GOOGLE_API_KEY=YOUR_GOOGLE_API_KEY
 AI_MODEL_NAME="gemini-1.5-flash-latest" # Or gemini-1.5-flash-latest, etc.
 AI_TEMPERATURE="0.4"
 MAX_TOKENS="15000" # Max tokens for AI *input* truncation (used by exemption_processor)
@@ -44,23 +71,6 @@ DYNAMIC_DELAY_THRESHOLD_REPOS="50"
 DYNAMIC_DELAY_SCALE_FACTOR="1.5"
 # Max Seconds: An upper cap for the dynamically calculated post-API call delay.
 DYNAMIC_DELAY_MAX_SECONDS="1.0"
-
-# Repository Platform Target Configurations NOTE: no quotes needed
-# Tokens/Auth details are now passed via CLI arguments.
-GITHUB_TOKEN="YOUR_GITHUB_PAT" # Personal Access Token for GitHub
-GITHUB_ORGS=CDCent,CDCgov,informaticslab,cdcai,epi-info,niosh-mining  # if not passsed via command line, it defaults to these specific GitHub org(s)
-# GITHUB_ENTERPRISE_URL="https://github.yourcompany.com" # Optional: URL for GitHub Enterprise Server
-
-GITLAB_URL=https://gitlab.com # If no url is passed via command line, it defaults to this specific GitLab instance URL
-GITLAB_GROUPS=my-biotech-group,philab-group/subgroup # same as above, if not passsed via command line, it defaults to this specific GitLab group(s)
-GITLAB_TOKEN="YOUR_GITLAB_PAT" # Personal Access Token for GitLab
-
-
-AZURE_DEVOPS_API_URL=https://dev.azure.com
-AZURE_DEVOPS_ORG=MyAzureOrg # Your default Azure DevOps organization name
-# Comma-separated list of Azure DevOps OrgName/ProjectName pairs.
-AZURE_DEVOPS_TARGETS=MyAzureOrg/ProjectA,MyAzureOrg/ProjectB,AnotherOrg/ProjectC
-AZURE_DEVOPS_TOKEN="YOUR_AZURE_DEVOPS_PAT" # Personal Access Token for Azure DevOps
 
 # --- Adaptive Delay for API Rate Limiting ---
 # Enable or disable the adaptive delay mechanism. Set to "true" or "false".
