--- a/.env
+++ b/.env
@@ -18,6 +18,10 @@ PRIVATE_REPO_CONTACT_EMAIL="shareit@cdc.gov" # Default contact for private/inter
 INSTRUCTIONS_PDF_URL=https://github.com/CDCGov/ShareIT-Act/instructions.pdf 
 EXEMPTED_NOTICE_PDF_URL=https://github.com/CDCGov/ShareIT-Act/exempted_notice.pdf
 
+# --- SSL Verification Control ---
+# WARNING: Disabling SSL verification is insecure and should ONLY be used for trusted internal environments.
+DISABLE_SSL_VERIFICATION="false" # Set to "true" to disable SSL certificate verification globally
+
 # -------------------------------
 #  AUTHENTICATION TOKENS
 # -------------------------------
