--- a/.env
+++ b/.env
@@ -8,6 +8,7 @@ ExemptedCSVFile="exempted_log.csv"
 PrivateIDCSVFile="privateid_mapping.csv"
 LimitNumberOfRepos="0" # Set to 0 or remove for no limit, or a positive integer to limit
 SCANNER_MAX_WORKERS="4" # Number of concurrent workers for repository processing
+REPOS_CREATED_AFTER_DATE="2025-04-21" # Optional: Filter repos created on or after this date (YYYY-MM-DD). Leave empty for no filter.
 HOURS_PER_COMMIT="0.5" # Default hours to estimate per commit, if enabled
 
 # --- Default Contact Emails ---
@@ -85,3 +86,5 @@ ADAPTIVE_DELAY_BASE_SECONDS="0.1" # e.g., 100 milliseconds
 ADAPTIVE_DELAY_THRESHOLD_REPOS="50"
 # Maximum delay in seconds to apply after processing a repo, regardless of scaling.
 ADAPTIVE_DELAY_MAX_SECONDS="2.0" # e.g., 2 seconds
+# Factor of repos that could have been modified after REPOS_CREATED_AFTER_DATE to be used in the delay calculation.
+ADAPTIVE_DELAY_CACHE_MODIFIED_FACTOR=0.20 
