--- a/docs/.env.template
+++ b/docs/.env.template
@@ -8,7 +8,7 @@ ExemptedCSVFile="exempted_log.csv"
 PrivateIDCSVFile="privateid_mapping.csv"
 LimitNumberOfRepos="0" # Set to 0 or remove for no limit, or a positive integer to limit
 SCANNER_MAX_WORKERS="4" # Number of concurrent workers for repository processing
-REPOS_CREATED_AFTER_DATE="2025-04-21" # Optional: Filter repos created on or after this date (YYYY-MM-DD). Leave empty for no filter.
+REPOS_CREATED_AFTER_DATE="2025-06-21" # Only scan repos created on or after June 21, 2025
 HOURS_PER_COMMIT="0.5" # Default hours to estimate per commit, if enabled
 
 # --- Default Contact Emails ---
@@ -58,8 +58,8 @@ AI_MODEL_NAME="gemini-1.5-flash-latest" # Or gemini-1.5-flash-latest, etc.
 AI_TEMPERATURE="0.4"
 MAX_TOKENS="15000" # Max tokens for AI *input* truncation (used by exemption_processor)
 AI_MAX_OUTPUT_TOKENS="2048" # Max tokens for AI *output* generation
-AI_DELAY_ENABLED="0.0" # Delay in seconds between AI calls (e.g., 1.0 for 1 second)
-AI_ORGANIZATION_ENABLED="false" # Whether to use AI to infer organization
+AI_DELAY_ENABLED="0.0" # Delay in seconds between AI calls. Only needed when using a trial account.
+AI_ORGANIZATION_ENABLED="true" # Whether to use AI to infer organization
 
 # --- Per-API Call Throttling (Base Delays) ---
 # Base delay in seconds to apply *after* each individual API call for the respective platform.
