--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       - GITHUB_ORGS=cdcent,cdcgov
       - SCANNER_MAX_WORKERS=5
       - AI_ENABLED=true
-      # Add any other .env variables your script needs
+      - TZ=America/New_York
     volumes:
       - ./output:/app/output 
       - ./logs:/app/logs 
@@ -33,6 +33,7 @@ services:
       - GOOGLE_API_KEY=${GOOGLE_API_KEY}
       - AI_ENABLED=${AI_ENABLED:-true}
       - SCANNER_MAX_WORKERS=5
+      - TZ=America/New_York
     volumes:
       - ./output:/app/output
       - ./logs:/app/logs 
@@ -40,21 +41,22 @@ services:
     command: >
       python generate_codejson.py gitlab 
 
-  # scan-azure:
-  #   build: .
-  #   container_name: scanner-azure-instance
-  #   environment:
-  #     - AZURE_DEVOPS_TOKEN=${AZURE_DEVOPS_TOKEN}
-  #     - AZURE_DEVOPS_TARGETS="MyAzureOrg/ProjectA,MyAzureOrg/ProjectB"
-  #     - GOOGLE_API_KEY=${GOOGLE_API_KEY}
-  #     - AI_ENABLED=true}
-  #     - SCANNER_MAX_WORKERS=4
-  #   volumes:
-  #     - ./output:/app/output
-  #     - ./logs:/app/logs
-  #     - .env:/app/.env
-  #   command: >
-  #     python generate_codejson.py azure 
+  scan-azure:
+    build: .
+    container_name: scanner-azure-instance
+    environment:
+      - AZURE_DEVOPS_TOKEN=${AZURE_DEVOPS_TOKEN}
+      - AZURE_DEVOPS_TARGETS="MyAzureOrg/ProjectA,MyAzureOrg/ProjectB"
+      - GOOGLE_API_KEY=${GOOGLE_API_KEY}
+      - AI_ENABLED=true}
+      - SCANNER_MAX_WORKERS=4
+      - TZ=America/New_York
+    volumes:
+      - ./output:/app/output
+      - ./logs:/app/logs
+      - .env:/app/.env
+    command: >
+      python generate_codejson.py azure 
 
 
 # -------------------------
@@ -74,6 +76,7 @@ services:
 #        condition: service_completed_successfully
     environment:
       - AI_ENABLED=false
+      - TZ=America/New_York
     volumes:
       - ./output:/app/output
       - ./logs:/app/logs 
