--- a/docs/.env.template
+++ b/docs/.env.template
@@ -16,8 +16,8 @@ DEFAULT_CONTACT_EMAIL="cdcinfo@cdc.gov" # Default contact for public/open repos
 PRIVATE_REPO_CONTACT_EMAIL="shareit@cdc.gov" # Default contact for private/internal repos
 
 # --- URLs for Private/Exempt Repositories ---
-INSTRUCTIONS_PDF_URL=https://github.com/CDCGov/ShareIT-Act/instructions.pdf 
-EXEMPTED_NOTICE_PDF_URL=https://github.com/CDCGov/ShareIT-Act/exempted_notice.pdf
+INSTRUCTIONS_PDF_URL=https://cdcgov.github.io/ShareIT-Act/assets/files/instructions.pdf 
+EXEMPTED_NOTICE_PDF_URL=https://cdcgov.github.io/ShareIT-Act/assets/files/exempted_notice.pdf
 
 # --- SSL Verification Control ---
 # WARNING: Disabling SSL verification is insecure and should ONLY be used for trusted internal environments.
