--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,11 +2,13 @@
 # Builds and run multiple docker containers to
 # processs concurrently the multiple platforms.
 # ---------------------------------
-# docker-compose up --build -d
+# Just run: docker-compose up -d
+# (to rebuilt image): docker-compose build --no-cache
 # ---------------------------------
 services:
 
   scan-github:
+    image: cdc-repo-scanner:latest
     build: . # Builds using the Dockerfile in the current directory (your project root)
     container_name: scanner-github-instance
     environment:
@@ -25,6 +27,7 @@ services:
       python generate_codejson.py github
  
   scan-gitlab:
+    image: cdc-repo-scanner:latest
     build: .
     container_name: scanner-gitlab-instance
     environment:
@@ -42,13 +45,14 @@ services:
       python generate_codejson.py gitlab 
 
   scan-azure:
+    image: cdc-repo-scanner:latest
     build: .
     container_name: scanner-azure-instance
     environment:
       - AZURE_DEVOPS_TOKEN=${AZURE_DEVOPS_TOKEN}
       - AZURE_DEVOPS_TARGETS="MyAzureOrg/ProjectA,MyAzureOrg/ProjectB"
       - GOOGLE_API_KEY=${GOOGLE_API_KEY}
-      - AI_ENABLED=true}
+      - AI_ENABLED=true
       - SCANNER_MAX_WORKERS=4
       - TZ=America/New_York
     volumes:
@@ -64,6 +68,7 @@ services:
 # -------------------
   # This service will run after and if scan-github, scan-gitlab, and scan-azure complete successfully.
   merge-results:
+    image: cdc-repo-scanner:latest
     build: . # Uses the same Dockerfile as other services
     container_name: scanner-merge-instance
     depends_on:
@@ -85,29 +90,30 @@ services:
 
 # ---------------------------------
 # DEBUG
-# THe enxt commented lines creates a container but runs nothing automatically. 
-# You can use it to run a scanner command via its terminal window (Exec) in docker desktop.
-# Example: type a command like this inside the container:
-# #> python generate_codejson.py github --gh-tk <PAT> --orgs cdcent --limit 30
+# THe next container runs nothing automatically. 
+# You can use it to manually run a scanner command or utility via its terminal window (Exec tab).
+# Examples: 
+# $> python generate_codejson.py github --gh-tk <PAT> --orgs cdcent --limit 30
+# $> python utils/azure_setup_test.py
 # ---------------------------------
 
 #services:
-  # repo-scanner:
-  #   build:
-  #     context: . # Use the Dockerfile in the current directory
-  #     dockerfile: Dockerfile
-  #   image: cdc-repo-scanner:latest 
-  #   container_name: cdc_repo_scanner_app # Optional: give a specific name to the running container
-  #   # Mount volumes for persistent data and configuration
-  #   # This replaces the -v flags from the docker run command
-  #   volumes:
-  #     - ./output:/app/output   # Mounts host's ./output to /app/output in container
-  #     - ./logs:/app/logs       # Mounts host's ./logs to /app/logs in container
-  #     - .env:/app/.env
+  session-scanner:
+    build:
+      context: . # Use the Dockerfile in the current directory
+      dockerfile: Dockerfile
+    image: cdc-repo-scanner:latest 
+    container_name: cdc_repo_scanner_app # Optional: give a specific name to the running container
+    # Mount volumes for persistent data and configuration
+    # This replaces the -v flags from the docker run command
+    volumes:
+      - ./output:/app/output   # Mounts host's ./output to /app/output in container
+      - ./logs:/app/logs       # Mounts host's ./logs to /app/logs in container
+      - .env:/app/.env
 
-  #   # Load environment variables from the .env file in the current directory
-  #   env_file:
-  #     - .env
-  #   # Keep stdin open and allocate a TTY for the main process (e.g., bash)
-  #   stdin_open: true
-  #   tty: true
+    # Load environment variables from the .env file in the current directory
+    env_file:
+      - .env
+    # Keep stdin open and allocate a TTY for the main process (e.g., bash)
+    stdin_open: true
+    tty: true
