--- a/docs/.env.template
+++ b/docs/.env.template
@@ -8,7 +8,7 @@ ExemptedCSVFile="exempted_log.csv"
 PrivateIDCSVFile="privateid_mapping.csv"
 LimitNumberOfRepos="0" # Set to 0 or remove for no limit, or a positive integer to limit
 SCANNER_MAX_WORKERS="4" # Number of concurrent workers for repository processing
-REPOS_CREATED_AFTER_DATE="2025-06-21" # Only scan repos created on or after June 21, 2025
+REPOS_CREATED_AFTER_DATE="2025-06-21" # Only scan repos created or modified on and after June 21, 2025.
 HOURS_PER_COMMIT="0.5" # Default hours to estimate per commit, if enabled
 
 # --- Default Contact Emails ---
